sonarcube suggestion